contact us image added

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,8 +1,10 @@
 .about-container{
     height: 100vh;
     width: 100%;
-    background-color: aqua;
-    margin-top: 70px;
+
+    padding-top: 70px; 
+    background-image: url("../assets/project2.jpg");
+background-size: cover;
 
 }
 
