--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,15 +1,37 @@
 .about-container{
     height: 100vh;
-    width: 100%;
-
-    padding-top: 70px; 
-    background-image: url("../assets/project2.jpg");
+  
+    /* background-color: #000000;
+    background-image: linear-gradient(315deg, #000000 0%, #7f8c8d 74%);
+    padding-top: 70px;  */
+    /* background-image: url("../assets/about2.jpg"); */
 background-size: cover;
 
 }
 
 .about-heading{
-    width: 100%;
+    /* width: 100%; */
+    padding-top: 60px;
     text-align: center;
     font-size: 40px;
+}
+.aboutDiv{
+    display:flex ;
+    
+}
+.about-content{
+    width: 50%;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    height: 600px;
+
+    text-align: center;
+}
+
+.about-description{
+    width: 50%;
+    margin-left: 10px;
+    border-radius: 20px;
+    border: 2px solid gray;
 }
